# remailable

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.cargo/: aarch64-remarkable-linux-gnu.json  arm-remarkable-linux-gnueabihf.json  config.toml
.github/workflows/: build.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-bootstrap-ci/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md
.planning/phases/02-connect-sync/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-read-view/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md
docker/: Dockerfile
packaging/: backend-entry.sh  external.manifest.json  manifest.json
qml/: AccountList.qml  AccountSettings.qml  AttachmentList.qml  EmailList.qml  EmailReader.qml  FolderList.qml  SearchBar.qml  SyncIndicator.qml  main.qml
qml/frontend/: AccountList.qml  AccountSettings.qml  EmailList.qml  EmailReader.qml  FolderList.qml  application.qrc  main.qml
scripts/: build-rcc.sh  docker-build.sh  linker-wrapper.sh  package.sh
src/: account.rs  appload.rs  backend.rs  cxxqt.rs  imap_conn.rs  main.rs  smtp_conn.rs  storage.rs  sync.rs
