[package]
name = "remailable"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_gui", "qt_qml"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
once_cell = "1"
imap = "2"
native-tls = "0.2"
lettre = "0.11"
regex = "1"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }